fixed spacing in contacts

--- a/src/App.css
+++ b/src/App.css
@@ -140,6 +140,9 @@ hr {
     /* height: 100vh; */
     transform: scale(1);
   }
+  .map-container {
+    margin-bottom: 80%;
+  }
 }
 
 @media only screen and (max-width: 1000px) {
@@ -744,7 +747,15 @@ hr {
   .resume p {
     transform: translateX(-20%);
   }
+  .map-container { 
+    margin-bottom: -150px;
+  } 
 }
+/* @media only screen and (min-height: 1000px) { */
+  /* .map-container { */
+    /* margin-bottom: 30%; */
+  /* } */
+/* } */
 @media only screen and (max-width: 768px) and (max-height: 500px) {
   .main-left {
     height: 50px;
@@ -790,6 +801,9 @@ hr {
   .resume p {
     width: 100%;
     transform: translateX(-10%);
+  }
+  .map-container {
+    margin-bottom: 10%;
   }
 }
 @media only screen and (max-width: 720px) and (max-height: 540px) {
@@ -844,6 +858,9 @@ hr {
   .resume p {
     transform: translateX(-8%);
   }
+  .map-container {
+    margin-bottom: 10%;
+  }
 }
 @media only screen and (width: 568px) and (height: 320px) {
   .about-info-content {
@@ -886,6 +903,8 @@ hr {
   .resume-image-container {
     margin-top: -50px;
   }
+  .contact {
+    font-size: 70%;
+  }
 }
 
-/* @media only screen and (max-width: 653px) and (max-height: 361px) { */
