--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -14,6 +14,7 @@
 .map-container {
   position: relative;
   left: -30px;
+  margin-bottom: 30%;
 }
 .contact i {
   color: rgb(232, 65, 24);
